js262/test/staging/sm/fields/await-identifier-module-2.js


/*---
flags:
  - module
negative:
  phase: parse
  type: SyntaxError
description: |
  pending
esid: pending
---*/

async () => class { x = await };
$DONOTEVALUATE();
